zhaoge/force-app/main/default/objects/PreviewDocument__c/PreviewDocument__c.object-meta.xml
<CustomObject>
    <label>プレビュー資料</label>
    <nameField>
        <label>プレビュー資料名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>