zhaoge/force-app/main/default/objects/PreviewDocument__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>説明</label>
    <length>255</length>
    <type>Text</type>
</CustomField>