zhaoge/force-app/main/default/objects/PreviewDocument__c/fields/DevelopPublic__c.field-meta.xml
<CustomField>
    <fullName>DevelopPublic__c</fullName>
    <defaultValue>true</defaultValue>
    <label>開発部公開</label>
    <type>Checkbox</type>
</CustomField>