zhaoge/force-app/main/default/objects/PreviewDocument__c/fields/FullPublic__c.field-meta.xml
<CustomField>
    <fullName>FullPublic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>全社公開</label>
    <type>Checkbox</type>
</CustomField>