zhaoge/force-app/main/default/objects/PreviewDocument__c/fields/GokuSearchString__c.field-meta.xml
<CustomField>
    <fullName>GokuSearchString__c</fullName>
    <formula>Name +  Tag__c +  Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>語句検索用文字列</label>
    <type>Text</type>
</CustomField>