zhaoge/force-app/main/default/objects/PreviewDocument__c/fields/PublishEndDate__c.field-meta.xml
<CustomField>
    <fullName>PublishEndDate__c</fullName>
    <label>掲載終了日</label>
    <type>Date</type>
</CustomField>