zhaoge/force-app/main/default/objects/PreviewDocument__c/fields/PublishStartDate__c.field-meta.xml
<CustomField>
    <fullName>PublishStartDate__c</fullName>
    <label>掲載開始日</label>
    <type>Date</type>
</CustomField>