zhaoge/force-app/main/default/objects/PreviewDocument__c/fields/SalesPublic__c.field-meta.xml
<CustomField>
    <fullName>SalesPublic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>営業部公開</label>
    <type>Checkbox</type>
</CustomField>