zhaoge/force-app/main/default/objects/PreviewDocument__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>タグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>