zhaoge/force-app/main/default/objects/PreviewDocument__c/validationRules/Check01.validationRule-meta.xml
<ValidationRule>
    <fullName>Check01</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISNULL(PublishStartDate__c ) ) &amp;&amp;  NOT( ISNULL(PublishEndDate__c ) ) &amp;&amp;  PublishStartDate__c &gt; PublishEndDate__c</errorConditionFormula>
    <errorMessage>掲載開始日は掲載終了日により以降の日付を指定できません。</errorMessage>
</ValidationRule>